# esp32s3-co5300-lvgl

./: sdkconfig  sdkconfig.defaults
components/IRremoteESP8266/: Arduino.h  CMakeLists.txt  IRrecv_test.h  IRsend_test.h  arduino_shim.cpp
main/: CMakeLists.txt  example_qspi_with_ram.c  idf_component.yml
main/smart_flipper/: smart_flipper.c  smart_flipper.h
main/smart_flipper/app/: app_manager.c  app_manager.h  nav.c  nav.h  scene_macros.h  scene_manager.c  scene_manager.h  view_dispatcher.c  view_dispatcher.h
main/smart_flipper/apps/ir/: ir_app.c  ir_app.h  ir_runner.c  ir_runner.h  ir_scene_ac.c  ir_scene_ac_brand.c  ir_scene_ask_back.c  ir_scene_config.h  ir_scene_edit.c  ir_scene_edit_button_select.c  ir_scene_edit_delete.c  ir_scene_edit_delete_done.c  ir_scene_edit_move.c  ir_scene_edit_rename.c  ir_scene_edit_rename_done.c  ir_scene_history.c  ir_scene_learn.c  ir_scene_learn_done.c  ir_scene_learn_enter_name.c  ir_scene_learn_success.c  ir_scene_macro_edit.c  ir_scene_macro_list.c  ir_scene_macro_pick_button.c  ir_scene_macro_pick_delay.c  ir_scene_macro_pick_remote.c  ir_scene_macro_pick_repeat.c  ir_scene_macro_run.c  ir_scene_remote.c  ir_scene_remote_actions.c  ir_scene_remote_list.c  ir_scene_settings.c  ir_scene_start.c  ir_scene_universal.c  ir_scene_universal_brute.c  ir_scene_universal_category.c  ir_scene_universal_save.c  ir_scenes.h
main/smart_flipper/apps/nfc/: nfc_app.c  nfc_app.h  nfc_scene_analytics.c  nfc_scene_attack_result.c  nfc_scene_card_info.c  nfc_scene_config.h  nfc_scene_detect_reader.c  nfc_scene_emulate.c  nfc_scene_main.c  nfc_scene_mfkey_complete.c  nfc_scene_mfkey_nonces.c  nfc_scene_mfkey_solve.c  nfc_scene_nested_attack.c  nfc_scene_nonces.c  nfc_scene_proto_scan.c  nfc_scene_protocols.c  nfc_scene_read.c  nfc_scene_read_menu.c  nfc_scene_read_result.c  nfc_scene_save.c  nfc_scene_saved_list.c  nfc_scene_saved_menu.c  nfc_scene_script.c  nfc_scenes.h
main/smart_flipper/apps/subghz/: subghz_app.c  subghz_app.h  subghz_scene_analyzer.c  subghz_scene_capture.c  subghz_scene_capture_result.c  subghz_scene_config.h  subghz_scene_decoded.c  subghz_scene_encode_tx.c  subghz_scene_main.c  subghz_scene_ping.c  subghz_scene_read.c  subghz_scene_receiver_info.c  subghz_scene_recv_dump.c  subghz_scene_relay_menu.c  subghz_scene_replay.c  subghz_scene_save.c  subghz_scene_saved_list.c  subghz_scene_send_dump.c  subghz_scene_settings.c  subghz_scene_signal_detail.c  subghz_scene_waveform.c  subghz_scenes.h
main/smart_flipper/bridge/: bridge.c  bridge.h
main/smart_flipper/hw/: hw_bat.c  hw_bat.h  hw_imu.c  hw_imu.h  hw_ir.c  hw_ir.h  hw_nfc.c  hw_nfc.h  hw_rgb.c  hw_rgb.h  hw_rtc.c  hw_rtc.h  hw_selftest.c  hw_selftest.h  hw_sleep.c  hw_sleep.h  hw_subghz.c  hw_subghz.h  hw_types.h
main/smart_flipper/include/: mf_classic.h  mf_classic_hardnested.h  mf_classic_mfkey32.h  mf_classic_nested.h  mf_ultralight.h  nfc.h  nfc_emulation.h  st25r_zephyr.h  subghz_hal.h  zephyr_fs.h
main/smart_flipper/include/app/: bridge_protocol.h
main/smart_flipper/lib/infrared/: furi_shim.h  ir_codecs.c  ir_codecs.h  ir_protocol_color.c  ir_protocol_color.h
main/smart_flipper/lib/infrared/ac/: ac_argo.c  ac_brand.c  (+23 more)
main/smart_flipper/store/: card_store.c  card_store.h  ir_settings.c  ir_settings.h  ir_store.c  ir_store.h  macro_store.c  macro_store.h  signal_store.c  signal_store.h  sleep_settings.c  sleep_settings.h  store_util.c  store_util.h
main/smart_flipper/ui/: arc_menu.c  arc_menu.h  circular_layout.c  circular_layout.h  styles.c  styles.h  transition.c  transition.h  ui_data.c  ui_data.h  ui_subjects.c  ui_subjects.h  view_module.h
main/smart_flipper/ui/modules/: view_action.c  view_action.h  view_custom.c  view_custom.h  view_dialog.c  view_dialog.h  view_info.c  view_info.h  view_popup.c  view_popup.h  view_submenu.c  view_submenu.h  view_text_input.c  view_text_input.h
main/smart_flipper/ui/screens/: scr_music.c  scr_music.h  scr_notifications.c  scr_notifications.h  scr_settings.c  scr_settings.h  scr_watchface.c  scr_watchface.h  scr_weather.c  scr_weather.h
main/smart_flipper/ui/widgets/: back_button.c  back_button.h  barrel_list.c  barrel_list.h  list_menu.c  list_menu.h  status_bar.c  status_bar.h  waveform_view.c  waveform_view.h
(+188 files in other folders)
